Resize requests are forgotten when maximizing a hidden window.
See https://bugzilla.mozilla.org/show_bug.cgi?id=1449166 for context, in particular comment 7+.
The STR would be something like:
gtk_window_resize(..);
gtk_window_maximize(..);
// Spin the event loop...
gtk_window_show(..);
The issue lies in the interaction of the suppression of resizes for hidden widgets in:
https://gitlab.gnome.org/GNOME/gtk/blob/3.22.30/gtk/gtkwindow.c#L8507
And the bit of code at:
https://gitlab.gnome.org/GNOME/gtk/blob/3.22.30/gtk/gtkwindow.c#L9381
That makes us forget the resize, given the window is hidden and not maximized yet.
Looks like that bit of code dates back to 42b02d9d.
I think the right fix is not entering that block if the window is not shown.